fix spacing on proposal page

--- a/adhocracy/gruene_nrw_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/gruene_nrw_theme/static_src/stylesheets/_overwrite.scss
@@ -846,10 +846,7 @@ h3#proposals,
 /*Kommentare */
 .comment_wrapper,
 ul.comments_list,
-.admin_controls,
-.top_actions,
-.vote_wrapper,
-a.button.delete {
+.vote_wrapper {
     margin-bottom: 2em;
 }
 ul.comments_list {
